--- a/Instagram/Templates/login.html
+++ b/Instagram/Templates/login.html
@@ -1,14 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html >
 <head>
   <meta charset="UTF-8">
   <title>Instagram-Log-Up</title>
-
-
-
-      <link rel="stylesheet" href="css/style.css">
-
-
+  <link rel="stylesheet" href="{% static 'css/stylelogin.css' %}">
 </head>
 
 <body>
@@ -17,21 +13,31 @@
     <section class="insta-data"><center>
       <section class="data-first">
         <h2>Instagram</h2>
-        <input placeholder='Número de teléfono, nombre de usuario o correo electrónico'>
-        <br/>
-        <input type="password" placeholder='Contraseña'>
-        <br/>
-        <button class="insta-facebook">Iniciar sesión</button>
+        <form class="" action="{% url 'login' %}" method="post">
+          {% csrf_token %}
+          <input type="text" name="username" placeholder="Usuario">
+          <br/>
+          <input type="password" name="password" placeholder="Contraseña">
+          <br/>
+          <button name="button"> Iniciar sesión </button>
+        </form>
         <p>¿Olvidaste tu contraseña?</p>
       </section>
       <section class="sign-in">
-        <p>¿Tienes una cuenta? Inicia sesión</p>
+        <p>¿Tienes una cuenta? <a href="{% url 'index' %}">Regístrate</a></p>
       </section>
       <section class="dowload">
         <p>Descargar aplicación</p>
       </section>
     </center></section>
 </section>
+
+    <!-- <form class="" action="{% url 'login' %}" method="post">
+      {% csrf_token %}
+      <input type="text" name="username" placeholder="Usuario">
+      <input type="password" name="password" placeholder="Contraseña">
+      <button name="button"> Iniciar sesión </button>
+    </form> -->
 
 
 </body>
